global entity creation